# python_env_advanced_template

./: .env_template  .gitignore  README.md  pyproject.toml
datasets/: README.md
datasets/001_publications_dataset/: .gitignore  README.md  prod_publication_test_dataset.jsonl.dvc
datasets/002_registry_names_dataset/: .gitignore  README.md  registry_names_dataset.json.dvc
datasets/003_embeddings_of_registry_names_dataset/: .gitignore  README.md
datasets/004_registry_names_deduplication_eval_dataset/: .gitignore  README.md  evaluation_dataset.xlsx.dvc  examples_for_prompt_LLM_as_a_judge_clean.xlsx.dvc
datasets/005_evaluate_extraction_process_datasets/: README.md
etc/: setup_env.sh
projects/P00_template/: .gitignore  README.md  pyproject.toml  setup_env.sh
projects/P00_template/notebooks/: N00_testing.ipynb  N02_llm_backends_demo.ipynb
projects/P02_deduplication_tmp/: .gitignore  pyproject.toml
projects/P02_deduplication_tmp/config/: config.py
projects/P02_deduplication_tmp/etc/prompts/: compare_registry_name.txt
projects/P02_deduplication_tmp/src/scripts/: 0_eda_streamlit_raw_clustering_explo.py  1_embed_publications_MistralEmbed.py  2_build_clusters.py  3_build_original_pairs.py  4_tune_pairs_wth_llm.py  5_train_clustering_model.py  5_train_clustering_model_v2.py  6_find_best_clustering_model.py  6_find_best_clustering_model_grid_search.py  eda_streamlit_w_clustering.py  embed_publications_PubMedBERT.py
projects/P02_deduplication_tmp/src/utils/: io_functions.py
projects/P04_official_reg_db_creation/: .gitignore  pyproject.toml
projects/P04_official_reg_db_creation/etc/configs/: small_mistral_config.json
projects/P04_official_reg_db_creation/etc/prompts/extraction/: prompt_geographical_area.txt  prompt_medical_condition.txt  prompt_outcome_measure.txt  prompt_pop_details.txt  prompt_registry_name.txt  prompt_registry_related.txt
projects/P04_official_reg_db_creation/etc/prompts/llm_as_a_judge/: compare_medical_condition.txt  compare_outcome_measure.txt  compare_registry_name.txt
projects/P04_official_reg_db_creation/notebooks/NW01/: R01_extract_registry_names.ipynb  R02_compare_registry_name_extractions.ipynb  R03_evaluate_registry_name.ipynb
projects/P04_official_reg_db_creation/notebooks/NW02/: R01_create_ema_dataset_r_names.ipynb  R02_create_dataset_dedup_r_names.ipynb  R03_update_geo_areas.ipynb  R04_bis_update_medical_conditions.ipynb
projects/P04_official_reg_db_creation/notebooks/future_scripts/SW01/: extract_all_registries.ipynb  update_all_medical_conditions.ipynb
projects/P04_official_reg_db_creation/snakefiles/: Snakefile_1
projects/P04_official_reg_db_creation/src/p04_official_reg_db_creation/: config.py  utils.py
projects/P04_official_reg_db_creation/src/scripts/: explore_registries_v1.py
projects/P04_official_reg_db_creation/src/scripts/SW01/: S01_load_publis_in_batches.py  S02_classify_publis_registry_related.py  S03_regroup_registry_related_publis_in_batches.py  S04_extract_registry_name.py  S05_update_medical_condition.py
projects/P06_search_engine/: .gitignore  Makefile  README.md  Snakefile  docker-compose.yaml  pyproject.toml
projects/P06_search_engine/notebooks/: N01_build_registries_dataset.ipynb  N02_process_first_annotations.ipynb  N03_process_second_annotations.ipynb  N04_reporting.ipynb  presentation.ipynb
projects/P06_search_engine/src/p06_search_engine/: assessing.py  config.py  indexing.py  io.py  preparing.py  searching.py  thresholding.py
projects/P06_search_engine/src/scripts/: s01_main_benchmarking.py  s02a_load_registries.py  s02b_prepare_registries.py  s03_fetch_ema_results.py  s04_process_first_annotations.py  s05_process_second_annotations.py  s06_reporting.py  s07_inference.py
projects/P07_fuzzy_dedup/: .gitignore  Makefile  README.md  Snakefile  Snakefile_preload  Snakefile_unlabeled  docker-compose.yaml  pyproject.toml
projects/P07_fuzzy_dedup/etc/: Snakefile_bucketing  Snakefile_old  bucketing_best_params.json  bucketing_grid_stats.sh
projects/P07_fuzzy_dedup/etc/prompts/: prompt_compare_registry_names_v2.txt  prompt_compare_registry_names_v3.txt
projects/P07_fuzzy_dedup/src/P07_fuzzy_dedup/: bucketer.py  config.py
projects/P07_fuzzy_dedup/src/P07_fuzzy_dedup/utils/: s3_io_functions.py  weaviate_helpers.py
projects/P07_fuzzy_dedup/src/scripts/: S01_load_annotated_ds_embeddings.py  S01_load_annotated_ds_geographical_areas.py  S01_load_annotated_ds_medical_conditions.py  S01_load_registry_dataset.py  S08_train_gbm.py  S08_train_histgbm.py  S10_clean_raw_dataset.py  S10_prepare_dataset.py  S11_prepare_features.py  S12_make_pipeline.py  S13_run_inference.py  S14_eval.py  S15_cluster_from_preds.py  S20_1_find_bucket_params.py  S20_2_1_prefill_weaviate.py  S20_2_measure_semantic_bucketing.py  S20_3_simple_local_bucking.py  S20_bucket_unlabeled_dataset.py  S21_featurise_unlabeled.py  S22_inference_unlabeled.py  S23_cluster_unlabeled.py  S23_soft_clustering.py  S24_eval_clustering.py  S25_bucket_ema_registries.py  S27_assign_ema_clusters.py  S28_evaluate_ema_aliases.py
projects/P07_fuzzy_dedup/src/scripts/deprecated/: S02_normalize_dataset.py  S03_block_dataset.py  S04_score_pairs.py  S05_dedupe_tier_a.py  S06_explore_results.py  S07_make_features.py  S09_eval_gbm.py
projects/P07_fuzzy_dedup/tests/: test_bucketer.py  test_weavitate.py
projects/P07_fuzzy_dedup/tests/featrues/: test_aggregator.py  test_base.py  test_char_ngram_jaccard_featurizer.py  test_jaccard_featurizer.py  test_jw_featurizer.py  test_lcs_featurizer.py  test_levenshtein_featurizer.py  test_shared_rare_token_frac_featurizer.py  test_text_metrics.py  test_tfidf_char_cosine_featurizer.py  test_tfidf_token_cosine_featurizer.py  test_token_stats_featurizer.py
projects/P07_fuzzy_dedup/tests/normalization/: test_rules.py  test_text_normalizer.py  test_utils.py
projects/P08_train_prod_dedup_model/: .gitignore  Snakefile  pyproject.toml
projects/P08_train_prod_dedup_model/src/scripts/: S01_prepare_datasets.py  S02_prepare_features.py  S03_train_model.py  S04_make_pipeline.py  S05_make_inference.py  S06_eval_model.py
(+187 files in other folders)
