[tool.poetry]
name = "root-project-template"
version = "0.1.0"
description = ""
authors = [
    "Gaëtan Pinon <g.pinon@quinten-health.com>",
]
readme = "README.md"
packages = [
    { include = "root_example_module", from = "src" },
]

[[tool.poetry.source]]
name = "pypi_product"
url = "https://pypi.quinten.cloud/repository/pypi_product/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
