[tool.poetry]
name = "p00-template"
version = "0.1.0"
description = ""
authors = ["Gaëtan Pinon <g.pinon@quinten-health.com>"]
readme = "README.md"
packages = [
    { include = "p00_template", from = "src" },
]

[[tool.poetry.source]]
name = "pypi_product"
url = "https://pypi.quinten.cloud/repository/pypi_product/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
root-project-template = {path = "../..", develop = true}
ipykernel = "^6.29.5"
scikit-learn = "^1.6.1"
plotly = "^6.3.0"
llm-backends = { version = "0.7.0", source = "pypi_product" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
