[tool.poetry]
name = "p04_official_reg_db_creation"
version = "0.1.0"
description = ""
authors = ["Gaetan Pinon <g.pinon@quinten-health.com>"]
readme = "README.md"
packages = [
    { include = "p04_official_reg_db_creation", from = "src" },
    { include = "scripts", from = "src" }
]

[[tool.poetry.source]]
name = "pypi_product"
url = "https://pypi.quinten.cloud/repository/pypi_product/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.3"
tqdm = "^4.67.1"
openpyxl = "^3.1.5"
mistralai = "^1.5.0"
mistral-common = "^1.5.2"
python-dotenv = "^1.0.1"
dvc = "^3.59.0"
openai = "^1.61.1"
matplotlib = "^3.10.0"
weaviate-client = "^4.11.0"
snakemake = "^8.28.0"
dvc-s3 = "^3.2.0"
streamlit = "^1.42.2"

registry-catalog-data-science = {path = "../..", develop = true}
tiktoken = "^0.9.0"
jsonlines = "^4.0.0"
seaborn = "^0.13.2"
plotly = "^6.1.2"
scikit-learn = "^1.7.0"
ipykernel = "^6.29.5"
click = "^8.2.1"
screen = "^1.0.1"
streamlit-option-menu = "^0.4.0"
pycountry = "^24.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
