[tool.poetry]
name = "P07-fuzzy-dedup"
version = "0.1.0"
description = ""
authors = ["Boris Kopin <b.kopin@quinten-france.com>"]
readme = "README.md"
packages = [
    { include = "P07_fuzzy_dedup", from = "src" },
    { include = "scripts", from = "src" }
]

[[tool.poetry.source]]
name = "pypi_product"
url = "https://pypi.quinten.cloud/repository/pypi_product/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
snakemake = "^8.29.2"
click = "^8.1.8"
registry-catalog-data-science = {path = "../..", develop = true}
ipykernel = "^6.29.5"
mmh3 = "^5.2.0"
pyarrow = "^21.0.0"
seaborn = "^0.13.2"
hyperopt = "^0.2.7"
networkx = "^3.5"
pulp = "<2.10"
pyvis = "^0.3.2"
plotly = "^6.3.0"
shap = "^0.48.0"
watchdog = "^6.0.0"
weaviate-client = "^4.16.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
