[tool.poetry]
name = "P08-train-prod-dedup-model"
version = "0.1.0"
description = ""
authors = ["Boris Kopin <b.kopin@quinten-france.com>"]
readme = "README.md"
packages = [
    { include = "P08_train_prod_dedup_model", from = "src" },
    { include = "scripts", from = "src" }
]

[[tool.poetry.source]]
name = "pypi_product"
url = "https://pypi.quinten.cloud/repository/pypi_product/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
snakemake = "^8.29.2"
click = "^8.1.8"
registry-catalog-data-science = {path = "../..", develop = true}
etl= {path = "../../../../registry-search-tool/services/etl", develop = true} # TO UPDATE to your env
ipykernel = "^6.29.5"
mmh3 = "^5.2.0"
pyarrow = "^21.0.0"
seaborn = "^0.13.2"
hyperopt = "^0.2.7"
networkx = "^3.5"
pulp = "<2.10"
pyvis = "^0.3.2"
plotly = "^6.3.0"
watchdog = "^6.0.0"
weaviate-client = "^4.16.9"
tqdm-joblib = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
